# airadcr-prompt-flow

./: .env  AIRADCR_COMMUNICATION_REFERENCE.md  AIRADCR_LOCAL_API_INTEGRATION.md  BUILD_INSTRUCTIONS.md  CI_FINAL_FIX_2025-09-29T11-30-00Z.md  CI_TOUCH_2025-09-28T06-28-00Z.md  CI_TOUCH_2025-09-28T06-35-00Z.md  CI_TOUCH_2025-09-28T06-55-00Z.md  CI_TOUCH_2025-09-29T10-30-00Z.md  CI_TOUCH_2025-09-29T11-00-00Z.md  CI_TOUCH_2025-09-29T11-15-00Z.md  CRITICAL_FIXES_SUMMARY.md  FINAL_BUILD_GUIDE.md  FINAL_EXE_ANALYSIS.md  FINAL_VALIDATION_SUMMARY.md  GUIDE_DEVELOPPEUR_INTEGRATION.md  GUIDE_UTILISATEUR.md  INJECTION_GUIDE.md  INSTALLATION_GUIDE.md  KEYBOARD_SHORTCUTS_REFERENCE.md  KEYBOARD_SHORTCUTS_SUMMARY.md  OPERATIONS_RUNBOOK.md  PRODUCTION_READY.md  README.md  SECURITY_ANALYSIS.md  SECURITY_CONFIGURATION.md  SPEECHMIKE_DEPLOYMENT_GUIDE.md  SPEECHMIKE_IMPLEMENTATION_COMPLETE.md  SPEECHMIKE_INTEGRATION_GUIDE.md  SPEECHMIKE_TAURI_SPECIFICATION.md  SYNC_TRIGGER.md  TAURI_UPDATER_API.md  TEO_HUB_API_SPECIFICATION.md  TEO_HUB_CLIENT_INTEGRATION.md  WINDOWS_INSTALLATION.md  WORKFLOW_COMPLET.md  airadcr_speechmike_ctrlf_profile.xml  airadcr_speechmike_hybrid_profile.xml  airadcr_speechmike_profile.xml  deployment-script.ps1  (+5 more)
.github/workflows/: build.yml
.lovable/: plan.md
public/: manifest.json
public/downloads/: README.md
scripts/: build-icons-robust.cjs  build-icons.cjs  create-ico-icons.cjs  force-icons-rgba.cjs  generate-tauri-icons.cjs  register-protocol-windows.ps1  run-local-validation.js  run-validation.js  simulate-validation.js  stress-test.js  test-dev-mode.js  test-http-server.sh  test-local-build.js  validate-build.js  validate-icons.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  LICENSE.rtf  LICENSE.txt  build.rs  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src-tauri/src/database/: backup.rs  keychain.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/http_server/: handlers.rs  metrics.rs  middleware.rs  mod.rs  openapi.yaml  routes.rs
src-tauri/src/speechmike/: devices.rs  mod.rs
src-tauri/src/teo_client/: errors.rs  mod.rs  models.rs
src/components/: DatabaseTab.tsx  DebugPanel.tsx  DevLogWindow.tsx  NativeToolbar.tsx  PositionIndicator.tsx  RisSimulator.tsx  SystemIntegrationPanel.tsx  TauriControls.tsx  TeoHubConfig.tsx  WebViewContainer.tsx
src/components/account/: SubscriptionStatus.tsx
src/components/pricing/: B2BForm.tsx  BillingToggle.tsx  PricingCard.tsx
src/config/: allowedSubdomains.ts  production.ts  subscriptionPlans.ts
src/contexts/: InjectionContext.tsx
src/hooks/: useClipboardBridge.ts  useGlobalShortcuts.ts  useInjection.ts  useInteractionMode.ts  useSecureMessaging.ts  useTauriCommands.ts  useTauriWindow.ts
src/integrations/supabase/: types.ts
src/pages/: Account.tsx  Download.tsx  Index.tsx  NotFound.tsx  Pricing.tsx  SubscriptionSuccess.tsx
src/security/: SecurityConfig.ts
src/utils/: logger.ts  windowsInstaller.ts
supabase/: config.toml
supabase/functions/check-subscription/: index.ts
supabase/functions/create-checkout-session/: index.ts
supabase/functions/customer-portal/: index.ts
supabase/migrations/: 20260104170139_b46581d6-a746-4582-b78a-9d4f470cbf9d.sql  20260111124257_de132960-e0ca-4c24-a259-c25cc405c983.sql
