[package]
name = "airadcr-desktop"
version = "1.0.0"
description = "AIRADCR améliore la qualité des comptes rendus radiologiques grâce à une dictée intelligente optimisée pour la radiologie. Solution desktop native pour radiologues."
authors = ["AIRADCR"]
license = "MIT"
repository = "https://github.com/airadcr/desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "window-all", "system-tray", "clipboard-all", "notification-all", "global-shortcut-all", "shell-open", "os-all", "path-all"] }
enigo = "0.6.1"
arboard = "3.2"
tokio = { version = "1.0", features = ["full"] }
active-win-pos-rs = "0.8.0"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "airadcr-desktop"
path = "src/main.rs"