[package]
name = "airadcr-desktop"
version = "1.0.0"
description = "AIRADCR (https://airadcr.com) - Application médicale professionnelle de dictée radiologique pour radiologues. Développée par Dr Lounes BENSID pour améliorer la qualité des comptes rendus radiologiques."
authors = ["AIRADCR <contact@airadcr.com>", "Dr Lounes BENSID"]
license = "MIT"
repository = "https://github.com/airadcr/desktop"
homepage = "https://airadcr.com"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "window-all", "system-tray", "clipboard-all", "notification-all", "global-shortcut-all", "shell-open", "os-all", "path-all"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
enigo = "0.6.1"
arboard = "3.2"
tokio = { version = "1.0", features = ["full"] }
active-win-pos-rs = "0.8.0"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# 🌐 Serveur HTTP local (port 8741)
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
actix-governor = "0.5"

# 📦 Base de données SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# 🔐 Hachage, UUID et génération aléatoire
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
regex = "1"

# 📁 Répertoires système
dirs = "5"

# sysinfo = "0.29"  # 🔒 DÉSACTIVÉ TEMPORAIREMENT

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "airadcr-desktop"
path = "src/main.rs"